# pbot

./: .env.example  .geminiignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.json  copy_docs_page.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
app/: README.md  bootstrap.py  config.py  config_validation.py  dashboard.py  logger.py  main.py  profiles.py
app/templates/: index.html  login.html
backtest/: README.md  ab_compare.py  common.py  late_expiry.py  replay.py  runner.py  simulator.py  sweep.py  walkforward.py  walkforward_ab.py
core/: README.md  engine.py  market_registry.py  runtime_state.py  strategy_utils.py
core/services/: README.md  event_router.py  external_context_service.py  sync_coordinator.py  trading_pipeline.py
data/: README.md  clob_client.py  data_client.py  db_config.py  fetcher.py  storage.py  websocket_client.py
data/repositories/: README.md  __init__.py  market_repository.py  migration_repository.py  portfolio_repository.py  schema_repository.py  trade_repository.py
db/: README.md  best_params.json  db.py  market.db  market.db-journal  market_v1.db  market_v3.db  market_v4.db  market_v5.db  paper_portfolio.json
features/: README.md  builder.py
scripts/: README.md  compare_prices.py  debug_fetcher.py  debug_raw.py  old_main.py  test_data_api.py
strategy/: README.md  paper_trader.py  scorer.py  signal.py
strategy/paper/: README.md  __init__.py  execution_manager.py  exit_manager.py  (+3 more)
tests/: README.md  test_strategy_utils.py
tools/: README.md  polymarket_account.py  test_clob.py  ws_test.py
